[package]
name = "schnorr"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "schnorr_benchmark"
harness = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.0"
group = "0.13.0"
rand_chacha = "0.3.1"
rand_core = "0.6"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
curve25519-dalek = { version = "4.1.3", features = ["serde", "group"] }
criterion = { version = "0.5", features = ["html_reports"] }
